# gp32-tools

./: .gitignore  Makefile  Makefile.am  configure.ac
b2fxec/: Makefile  b2fxec.prj  readme.txt
b2fxec/crt/: decrunch3.s  hdr_fxe0.s  hdr_fxe3.s
b2fxec/include/: compress_fxe0.h  compress_fxe2.h  compress_fxe3.h  dol_def.h  fio.h  getopt.h  logo.h  lz2min.h  params.h  port.h
b2fxec/source/: cb.cpp  compress_fxe0.cpp  compress_fxe2.cpp  getopt.cpp  headers.cpp  lz2min.cpp  main.cpp  unfxe.cpp
gpd/: Makefile  gpd.prj  readme.txt
gpd/include/: fxe.h
gpd/source/: arm-dis.c  fxe.c
src/b2fxec/: b2fxec_io.h  bitutils.h  cb.h  chuff.cpp  chuff.h  compress.h  compress_fxe0.cpp  compress_fxe2.cpp  compress_fxe3.cpp  dol_def.h  fio.cpp  fxe_def.h  headers.h  main.cpp  port.cpp  port.h  unfxe.h
src/b2fxec/crt/: hdr_fxe2.s
src/gpd/: arm-dis.h  bitutils.h  dis-asm.h  disasm.c  disasm.h  main.c
src/unfxe/: bitutils.h  unfxe.c
unfxe/: Makefile
unfxe/source/: unfxe.c
zda_compressor/: Makefile  README.TXT  zda_compressor.c  zda_tester.c
